:recycle: refactor: Users.Dto & list.html refactoring